exports[`require-frontmatter-fields > invalid(1): ---\n---\n\n# Hello 1`] = `

Filename: example.md

Options:
- fields:
    - 'title'

Code:
  1 | ---
  2 | ---
  3 |
  4 | # Hello

`;

exports[`require-frontmatter-fields > invalid(1): ---\n---\n\n# Hello 2`] = `

Message:
> 1 | ---
    | ^^^
> 2 | ---
    | ^^^ Missing required frontmatter field \`title\`.
  3 |
  4 | # Hello

`;

exports[`require-frontmatter-fields > invalid(2): ---\n- title: Hello\n---\n\n# Hello 1`] = `

Filename: example.md

Options:
- fields:
    - 'title'
    - 'description'
    - 'date'

Code:
  1 | ---
  2 | - title: Hello
  3 | ---
  4 |
  5 | # Hello

`;

exports[`require-frontmatter-fields > invalid(2): ---\n- title: Hello\n---\n\n# Hello 2`] = `

Message:
> 1 | ---
    | ^^^
> 2 | - title: Hello
    | ^^^^^^^^^^^^^^
> 3 | ---
    | ^^^ Missing required frontmatter field \`title\`.
  4 |
  5 | # Hello

`;

exports[`require-frontmatter-fields > invalid(2): ---\n- title: Hello\n---\n\n# Hello 3`] = `

Message:
> 1 | ---
    | ^^^
> 2 | - title: Hello
    | ^^^^^^^^^^^^^^
> 3 | ---
    | ^^^ Missing required frontmatter field \`description\`.
  4 |
  5 | # Hello

`;

exports[`require-frontmatter-fields > invalid(2): ---\n- title: Hello\n---\n\n# Hello 4`] = `

Message:
> 1 | ---
    | ^^^
> 2 | - title: Hello
    | ^^^^^^^^^^^^^^
> 3 | ---
    | ^^^ Missing required frontmatter field \`date\`.
  4 |
  5 | # Hello

`;

exports[`require-frontmatter-fields > invalid(3): ---\nmetadata: {title: Hello}\n---\n\n# Hello 1`] = `

Filename: example.md

Options:
- fields:
    - 'title'

Code:
  1 | ---
  2 | metadata: {title: Hello}
  3 | ---
  4 |
  5 | # Hello

`;

exports[`require-frontmatter-fields > invalid(3): ---\nmetadata: {title: Hello}\n---\n\n# Hello 2`] = `

Message:
> 1 | ---
    | ^^^
> 2 | metadata: {title: Hello}
    | ^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | ---
    | ^^^ Missing required frontmatter field \`title\`.
  4 |
  5 | # Hello

`;

exports[`require-frontmatter-fields > invalid(4): ---\n? [complex, key]\n: ignored\ntitle: Hello\n---\n\n# Hello 1`] = `

Filename: example.md

Options:
- fields:
    - 'title'
    - 'description'
    - 'date'

Code:
  1 | ---
  2 | ? [complex, key]
  3 | : ignored
  4 | title: Hello
  5 | ---
  6 |
  7 | # Hello

`;

exports[`require-frontmatter-fields > invalid(4): ---\n? [complex, key]\n: ignored\ntitle: Hello\n---\n\n# Hello 2`] = `

Message:
> 1 | ---
    | ^^^
> 2 | ? [complex, key]
    | ^^^^^^^^^^^^^^^^
> 3 | : ignored
    | ^^^^^^^^^
> 4 | title: Hello
    | ^^^^^^^^^^^^
> 5 | ---
    | ^^^ Missing required frontmatter field \`description\`.
  6 |
  7 | # Hello

`;

exports[`require-frontmatter-fields > invalid(4): ---\n? [complex, key]\n: ignored\ntitle: Hello\n---\n\n# Hello 3`] = `

Message:
> 1 | ---
    | ^^^
> 2 | ? [complex, key]
    | ^^^^^^^^^^^^^^^^
> 3 | : ignored
    | ^^^^^^^^^
> 4 | title: Hello
    | ^^^^^^^^^^^^
> 5 | ---
    | ^^^ Missing required frontmatter field \`date\`.
  6 |
  7 | # Hello

`;

exports[`require-frontmatter-fields > invalid(5): ---\ntitle: Hello\n---\n\n# Hello 1`] = `

Filename: example.md

Options:
- fields:
    - 'title'
    - 'description'
    - 'date'

Code:
  1 | ---
  2 | title: Hello
  3 | ---
  4 |
  5 | # Hello

`;

exports[`require-frontmatter-fields > invalid(5): ---\ntitle: Hello\n---\n\n# Hello 2`] = `

Message:
> 1 | ---
    | ^^^
> 2 | title: Hello
    | ^^^^^^^^^^^^
> 3 | ---
    | ^^^ Missing required frontmatter field \`description\`.
  4 |
  5 | # Hello

`;

exports[`require-frontmatter-fields > invalid(5): ---\ntitle: Hello\n---\n\n# Hello 3`] = `

Message:
> 1 | ---
    | ^^^
> 2 | title: Hello
    | ^^^^^^^^^^^^
> 3 | ---
    | ^^^ Missing required frontmatter field \`date\`.
  4 |
  5 | # Hello

`;
